found_online/prol.etari.at-documentation/iptables.save.txt
# Generated by iptables-save v1.4.8 on Sat May 26 22:56:59 2012
*raw
:PREROUTING ACCEPT [59237028:35953759791]
:OUTPUT ACCEPT [55620940:38191732626]
COMMIT
# Completed on Sat May 26 22:56:59 2012
# Generated by iptables-save v1.4.8 on Sat May 26 22:56:59 2012
*nat
:PREROUTING ACCEPT [183494:13840750]
:POSTROUTING ACCEPT [46463:3247529]
:OUTPUT ACCEPT [46466:3248697]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 25565 -j DNAT --to-destination 192.168.200.1:25565 
-A POSTROUTING -o tun0 -j MASQUERADE 
COMMIT
# Completed on Sat May 26 22:56:59 2012
# Generated by iptables-save v1.4.8 on Sat May 26 22:56:59 2012
*mangle
:PREROUTING ACCEPT [59237028:35953759791]
:INPUT ACCEPT [53522747:34362028620]
:FORWARD ACCEPT [5438805:1494879676]
:OUTPUT ACCEPT [55620934:38191732226]
:POSTROUTING ACCEPT [61059739:39686611902]
COMMIT
# Completed on Sat May 26 22:56:59 2012
# Generated by iptables-save v1.4.8 on Sat May 26 22:56:59 2012
*filter
:INPUT ACCEPT [53522747:34362028620]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [55620934:38191732226]
-A INPUT -i eth0 -p tcp -m tcp --dport 4369 -j REJECT --reject-with icmp-port-unreachable 
-A FORWARD -i vlan3 -o tun0 -m state --state NEW -j ACCEPT 
-A FORWARD -i vlan2 -o tun0 -m state --state NEW -j ACCEPT 
-A FORWARD -d 192.168.200.1/32 -p tcp -m tcp --dport 25565 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -d 192.168.200.1/32 -p tcp -m tcp --dport 80 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -o tun0 -j ACCEPT 
-A FORWARD -i tun0 -j ACCEPT 
COMMIT
# Completed on Sat May 26 22:56:59 2012
